fix: station table horizontal scroll issue

--- a/src/components/table/station-table.module.css
+++ b/src/components/table/station-table.module.css
@@ -1,3 +1,7 @@
 .tableWrapper {
+    height: auto;
     margin: 1em 0 50px 0;
+    overflow-x: auto;
+    overflow-y: auto;
+    width: 100%;
 }
